# 3d

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Engine.cpp  Engine.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Triangle.cpp  Triangle.h
src/config/: Environment.cpp  Environment.h
src/mesh/: Mesh.cpp  Mesh.h  Triangle.cpp  Triangle.h
src/mesh/material/: Material.cpp  Material.h  Texture.cpp  Texture.h
src/node/: Node.cpp  Node.h
src/scene/: Scene.cpp  Scene.h
src/spatial/camera/: Camera.cpp  Camera.h
src/spatial/collider/: AABBCollider.cpp  AABBCollider.h  Collider.cpp  Collider.h  SphereCollider.cpp  SphereCollider.h
src/spatial/light/: Light.cpp  Light.h  Reflection.cpp  Reflection.h
src/transformation/: Clip.cpp  Clip.h  Matrix.cpp  Matrix.h  VectorUtils.cpp  VectorUtils.h
usage/: CollisionScene.cpp  CollisionScene.h  GravityScene.cpp  GravityScene.h  SmallScene.cpp  SmallScene.h  TestScene.cpp  TestScene.h
